atualização do projeto

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "projeto-final",
   "version": "1.0.0",
   "description": "Projeto de PADB, redes e WEb",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
